# SecureCrypto

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: cli.h  decryptor.h  encryptor.h  keymanager.h  logger.h  secure_crypto.h
src/: cli.cpp  decryptor.cpp  encryptor.cpp  keymanager.cpp  logger.cpp  main.cpp  secure_crypto.cpp
tests/: test.cpp  test_secure_crypto.cpp
